project(8bitemu)
cmake_minimum_required(VERSION 3.5.1)
#file(GLOB SOURCES "sources/*.cpp")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../)
set(SOURCES sources/main.cpp sources/chip8/chip8.cpp sources/chip8/chip8.h sources/chip8/config.h sources/chip8/memory.cpp sources/chip8/memory.h sources/chip8/registers.cpp sources/chip8/registers.h sources/chip8/stack.cpp sources/chip8/stack.h)
#add_subdirectory( SDL2-2.0.16 )
#find_package(SDL2 REQUIRED)
set(SDL2_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/lib/SDL2/lib/x64/SDL2.lib;${CMAKE_CURRENT_LIST_DIR}/lib/SDL2/lib/x64/SDL2main.lib")
set(SDL2_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/lib/SDL2/include/)
set(CMAKE_MODULE_PATH  "${CMAKE_SOURCE_DIR}/cmake/")

#find_package(SDL2 REQUIRED SDL2)
add_executable(${PROJECT_NAME} ${SOURCES})
#target_compile_options(${PROJECT_NAME} PRIVATE $<$<C_COMPILER_ID:MSVC>:/W4 /WX>)
#target_compile_options(${PROJECT_NAME} PRIVATE $<$<NOT:$<C_COMPILER_ID:MSVC>>:-Wall -Wextra -pedantic -Werror>)
include_directories( ${SDL2_INCLUDE_DIR})

message(STATUS "Include directory: " ${SDL2_INCLUDE_DIR})
message(STATUS "Libraries: " ${SDL2_LIBRARY})
target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARY})